# gala-acp

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  delivery.gala  delivery_test.gala  envelope.gala  envelope_test.gala  gala.mod  go.mod  ledger.gala  ledger_test.gala  run.gala  run_test.gala
.github/workflows/: ci.yml
agent/: BUILD.bazel  agent.gala  claude_stream_json.gala  claude_stream_json_test.gala  claude_transport.gala  claude_transport_test.gala  session_id.gala  trace.gala
