module(
    name = "gala_acp",
    # Tracks the latest tagged gala-acp release. Bump in lockstep with the
    # release tag so registry consumers see a MODULE.bazel whose
    # module(version = X) matches the version they requested via
    # bazel_dep(name = "gala_acp", version = X) — bzlmod rejects it otherwise.
    version = "0.2.0",
)

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "gala", version = "0.70.0")
bazel_dep(name = "rules_gala", version = "0.1.3")
bazel_dep(name = "rules_go", version = "0.59.0")

bazel_dep(name = "gazelle", version = "0.47.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.25.5")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_github_google_uuid")
